# Food-Image-Predictor

./: README.md  app.py  app2.py  main.py  pyproject.toml  requirements.txt
